# API-S3

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  sonar-project.properties
.ci/: base.yml  build.yml  deploy.yml  package.yml  preprod.yml  quality.yml  sonar.yml
benches/: image_benchmark.rs
docs/: architecture.md  configuration.md  deployment.md  getting-started.md
examples/: compare_size.rs
k8s/base/: deployment.yml  ingress.yml  service.yml
k8s/overlays/pre-prod/: ingress-patch.yml  kustomization.yml
k8s/overlays/production/: ingress-patch.yml  kustomization.yml
scripts/: version-bump-merge.sh
src/: lib.rs  telemetry.rs
src/controllers/resources/: bulk.rs  get.rs  mod.rs
src/models/: device.rs  mod.rs  resources.rs
src/routes/: resources.rs
src/services/: cache.rs  errors.rs  mod.rs  multipart.rs  storage.rs
src/services/image_processor/: decoder.rs  encoder.rs  mod.rs  resizer.rs
tests/: integration_tests.rs
